# phitodo-ocaml

./: .gitignore  .ocamlformat  Makefile  README.md  dune-project  phitodo_tui.opam
lib/: dune  error.ml  phitodo.ml
lib/config/: config.ml
lib/db/: repository.ml  schema.ml
lib/models/: project.ml  tag.ml  task.ml
lib/services/: filter_service.ml  github_service.ml  toggl_service.ml
lib/ui/: app.ml  theme.ml  update.ml  view.ml
lib/ui/components/: help.ml  input.ml  modal.ml  sidebar.ml  task_detail.ml  task_form.ml  task_list.ml
lib/ui/views/: anytime_view.ml  completed_view.ml  github_view.ml  inbox_view.ml  project_view.ml  review_view.ml  settings_view.ml  tag_view.ml  task_view.ml  today_view.ml  toggl_view.ml  upcoming_view.ml
test/: dune  test_repository.ml
